[package]
name = "koradi_svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
reqwest = "0.12.2"
sha2 = "0.10.8"
toml = "0.8.2"
serde = { version = "1.0.97", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1.36.0", features = ["full"]}
chrono = "0.4"
